--- a/gvb_admin/package.json
+++ b/gvb_admin/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "ant-design-vue": "^4.2.5",
+    "font-awesome": "^4.7.0",
     "pinia": "^2.2.4",
     "vue": "^3.5.11",
     "vue-router": "^4.4.5"
