--- a/gvb_admin/package.json
+++ b/gvb_admin/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "ant-design-vue": "^4.2.5",
+    "axios": "^1.7.7",
     "font-awesome": "^4.7.0",
     "pinia": "^2.2.4",
+    "pinia-plugin-persistedstate": "^4.1.1",
     "vue": "^3.5.11",
     "vue-router": "^4.4.5"
   },
