--- a/gvb_admin/package.json
+++ b/gvb_admin/package.json
@@ -9,16 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/swiper": "^5.4.3",
     "ant-design-vue": "^4.2.5",
     "axios": "^1.7.7",
     "font-awesome": "^4.7.0",
+    "nprogress": "^0.2.0",
     "pinia": "^2.2.4",
     "pinia-plugin-persistedstate": "^4.1.1",
+    "swiper": "^11.1.14",
     "vue": "^3.5.11",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
+    "less": "^4.2.0",
     "sass": "^1.79.5",
     "vite": "^5.4.8"
   }
