首页加载优化29m-6m,mde-v3内依赖影响4m

--- a/gvb_web/package.json
+++ b/gvb_web/package.json
@@ -9,35 +9,42 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/swiper": "^5.4.3",
+    "@ant-design/icons-vue": "^7.0.1",
+    "@fortawesome/fontawesome-free": "^6.7.1",
+    "@vueuse/head": "^2.0.0",
     "ant-design-vue": "^4.2.5",
     "axios": "^1.7.7",
-    "echarts": "^5.5.1",
-    "echarts-wordcloud": "^2.1.0",
-    "element-plus": "^2.8.6",
     "font-awesome": "^4.7.0",
-    "gsap": "^3.12.5",
-    "md-editor-v3": "^4.21.2",
+    "md-editor-v3": "^5.0.2",
     "nprogress": "^0.2.0",
     "pinia": "^2.2.4",
     "pinia-plugin-persistedstate": "^4.1.1",
-    "snapsvg": "^0.5.1",
-    "swiper": "^11.1.14",
+    "rollup-plugin-terser": "^7.0.2",
     "vue": "^3.5.11",
     "vue-activity-calendar": "^1.2.2",
+    "vue-meta": "^3.0.0-alpha.2",
     "vue-router": "^4.4.5",
     "vue3typed": "^0.1.5"
   },
   "devDependencies": {
-    "@iconify-json/simple-icons": "^1.2.10",
-    "@iconify-json/solar": "^1.2.1",
-    "@vitejs/plugin-vue": "^5.1.4",
+    "@iconify-json/simple-icons": "^1.2.13",
+    "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.20",
-    "less": "^4.2.0",
+    "babel-plugin-import": "^1.13.8",
+    "icons": "^1.0.0",
+    "less": "^4.2.1",
+    "less-loader": "^12.2.0",
     "postcss": "^8.4.47",
-    "sass": "^1.79.5",
+    "postcss-preset-env": "^10.1.1",
+    "rollup-plugin-visualizer": "^5.12.0",
+    "sass": "^1.81.0",
     "tailwindcss": "^3.4.14",
-    "unplugin-icons": "^0.19.3",
-    "vite": "^5.4.8"
+    "unplugin-icons": "^0.20.2",
+    "unplugin-vue-components": "^0.27.5",
+    "vite": "^6.0.1",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-html": "^3.2.2",
+    "vite-plugin-imp": "^2.4.0",
+    "vite-plugin-style-import": "^2.0.0"
   }
 }
